implemented duplicate question functonality 10%

--- a/templates/administration/practice/instructor_problems.html
+++ b/templates/administration/practice/instructor_problems.html
@@ -116,6 +116,12 @@ Problem Set🔥
                                 </h6>
                             </th>
 
+                            <th class="border-bottom-0 justify-content-center">
+                                <h6 class="fw-semibold mb-0">
+                                    Action#5
+                                </h6>
+                            </th>
+
                         </tr>
                     </thead>
 
@@ -278,6 +284,11 @@ Problem Set🔥
                 <td class="border-bottom-0">
                     <div class="d-flex align-items-center gap-2">
                         <a href="/administration/test_code/${question.slug}" class="btn btn-info text-blue float-end">TEST CODE</a>
+                    </div>
+                </td>
+                <td class="border-bottom-0">
+                    <div class="d-flex align-items-center gap-2">
+                        <a href="/administration/make_duplicate/${question.id}" class="btn btn-outline-secondary text-blue float-end">Make a copy</a>
                     </div>
                 </td>
             `;
