added the sheet timer on students side

--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -596,6 +596,7 @@
                 editor.setOptions({
                     enableSnippets: true,
                     cursorStyle: "smooth",
+                    enableAutoIndent: true,
                 });
                 updateEditorMode(languageSelect.val());
             }
