--- a/templates/administration/sheet/leaderboard.html
+++ b/templates/administration/sheet/leaderboard.html
@@ -9,6 +9,26 @@ Leaderboard | {{ sheet.name }}
 active
 {% endblock %}
 
+{% block extra_css %}
+
+<style>
+    .download-btn {
+        background: linear-gradient(to right, #ff4500, #ffa500);
+        color: white;
+        padding: 10px 20px;
+        text-decoration: none;
+        border-radius: 5px;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .download-btn:hover {
+        background: linear-gradient(to right, #ff6347, #ff4500);
+    }
+</style>
+
+{% endblock %}
 
 {% block body %}
 
@@ -18,6 +38,12 @@ active
             <h3 class="heading">
                 <span class="fw-semibold">{{ sheet.name }}'s Leaderboard🔥</span>
             </h3>
+
+            <div class="d-flex justify-content-between align-items-center">
+                <a href="{% url 'download_leaderboard' slug=sheet.slug %}" class="download-btn">Download
+                    Leaderboard</a>
+            </div>
+
         </div>
     </div>
 
