implemented edit sheet system for admin

--- a/templates/administration/base.html
+++ b/templates/administration/base.html
@@ -360,7 +360,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link nav-icon-hover" href="{% url 'notifications' %}">
+                            <a class="nav-link nav-icon-hover" href="{% url 'instructor_notifications' %}">
                                 <i class="ti ti-bell-ringing"></i>
                                 <!-- <div class="notification bg-primary rounded-circle"></div> -->
                             </a>
