--- a/templates/practice/sheet.html
+++ b/templates/practice/sheet.html
@@ -149,6 +149,8 @@ active
                     </thead>
 
                     <tbody>
+
+                        <!-- style="background-color: rgba(66, 66, 66, 0.639);" -->
                         {% for question in questions %}
                         <tr>
                             <td class="border-bottom-0">
