--- a/templates/administration/sheet/add_sheet.html
+++ b/templates/administration/sheet/add_sheet.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-Add Question
+Add Sheet
 {% endblock %}
 
 {% block sheet_active %}
@@ -85,6 +85,13 @@ active
                                         </label>
                                         <input type="file" class="form-control" id="question_title" name="thumbnail"
                                             required>
+                                    </div>
+                                </div>
+                                
+                                <div>
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="isSample">Is It Sequential?</label>
+                                        <input type="checkbox" class="form-check-input" id="isSample" name="is_sequential">
                                     </div>
                                 </div>
 
