--- a/templates/administration/sheet/sheet.html
+++ b/templates/administration/sheet/sheet.html
@@ -33,8 +33,7 @@ active
                     data-bs-target="#setTimerModal">⏰</button>
 
 
-                <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal"
-                    data-bs-target="#selectQuestionBtn">Duplicate a Question</button>
+                <a href="{% url 'instructor_add_new_question' sheet.slug %}" class="btn btn-outline-primary">Add New Question</a>
 
                 <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split"
                     data-bs-toggle="dropdown" aria-expanded="false">
@@ -329,7 +328,7 @@ active
                     <h5 class="modal-title" id="selectQuestionBtnLabel">Enter Question ID</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form action="{% url 'instructor_make_duplicate' sheet.slug %}" method="POST">
+                <form action="#" method="POST">
                     {% csrf_token %}
                     <div class="modal-body">
                         <div class="mb-3">
@@ -521,7 +520,7 @@ active
             console.log(sheetId, questionId);
             if (!sheetId || !questionId) return;
 
-            const url = `/administration/add_question_to_sheet/${sheetId}/${questionId}/`;
+            const url = `/administration/make_duplicate/${sheetId}/${questionId}/`;
             console.log(url);
             fetch(url, {
                 method: "POST",
