--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -550,7 +550,8 @@
                             <a class="nav-link pe-none" id="sheet-link" href="#">
                                 <!-- data-bs-toggle="tooltip" title="Your Current Streaks🔥" data-bs-placement="bottom" -->
                                 <img id="fire-icon" src="{% static 'img/student/fire.png' %}" alt="">
-                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer">Kya Bolti Public!</span>
+                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer"></span>
+                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer">🪙{{ student.coins }}</span>
                                 </h1>
                             </a>
                         </li>
@@ -771,7 +772,7 @@
                             const timerInterval = setInterval(updateTimer, 1000);
                             updateTimer();
                         } else {
-                            document.getElementById('active-sheet-timer').innerText = "No active sheet.";
+                            document.getElementById('active-sheet-timer').innerText = "No active sheet";
                         }
                     })
                     .catch(error => {
