added sheets on the course page of admin

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -772,7 +772,7 @@
                             const timerInterval = setInterval(updateTimer, 1000);
                             updateTimer();
                         } else {
-                            document.getElementById('active-sheet-timer').innerText = "No active sheet";
+                            document.getElementById('active-sheet-timer').innerText = "";
                         }
                     })
                     .catch(error => {
