fixed pod error

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -551,7 +551,9 @@
                                 <!-- data-bs-toggle="tooltip" title="Your Current Streaks🔥" data-bs-placement="bottom" -->
                                 <img id="fire-icon" src="{% static 'img/student/fire.png' %}" alt="">
                                 <span class="mx-1 badge text-bg-dark" id="active-sheet-timer"></span>
-                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer">🪙{{ student.coins }}</span>
+                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer">
+                                    
+                                    {{ student.coins }}</span>
                                 </h1>
                             </a>
                         </li>
