--- a/templates/administration/practice/instructor_pod.html
+++ b/templates/administration/practice/instructor_pod.html
@@ -56,7 +56,7 @@ PODs🔥
         </div>
     </div> -->
 
-    <!-- ================================= SESSIONS TABLE ================================== -->
+    <!-- ================================= POD TABLE ================================== -->
 
     <div class="card w-100">
         <div class="card-body p-4">
