--- a/templates/administration/practice/set_pod.html
+++ b/templates/administration/practice/set_pod.html
@@ -127,8 +127,8 @@ active
                                 <h6 class="fw-semibold mb-0">{{ forloop.counter }}</h6>
                             </td>
                             <td class="border-bottom-0">
-                                <h6 class="fw-semibold mb-1" data-bs-toggle="tooltip" data-bs-placement="top"
-                                    title="{{ question.title }}">{{ question.title|truncatechars:25 }}</h6>
+                                <h6 class="fw-semibold mb-1 text-wrap" data-bs-toggle="tooltip" data-bs-placement="top"
+                                    title="{{ question.title }}">{{ question.title }}</h6>
 
                                 {% for sheet in question.sheets.all %}
                                 <span style="font-weight: bold;"> {{ question.sheet.name }}
@@ -156,7 +156,7 @@ active
 
                             <td class="border-bottom-0">
                                 <div class="d-flex align-items-center gap-2">
-                                    <a href="#" class="btn btn-outline-success text-blue float-end">Test Cases ({{question.test_cases.count }})</a>
+                                    <a href="{% url 'test_cases' question.slug %}" class="btn btn-outline-success text-blue float-end">Test Cases ({{question.test_cases.count }})</a>
                                 </div>
                             </td>
 
