added streaks and pod feature. testing pending

--- a/templates/student/base.html
+++ b/templates/student/base.html
@@ -549,11 +549,10 @@
                         <li class="nav-item">
                             <a class="nav-link pe-none" id="sheet-link" href="#">
                                 <!-- data-bs-toggle="tooltip" title="Your Current Streaks🔥" data-bs-placement="bottom" -->
-                                <img id="fire-icon" src="{% static 'img/student/fire.png' %}" alt="">
+                                <!-- <img id="fire-icon" src="{% static 'img/student/fire.png' %}" alt=""> -->
                                 <span class="mx-1 badge text-bg-dark" id="active-sheet-timer"></span>
-                                <span class="mx-1 badge text-bg-dark" id="active-sheet-timer">
-                                    
-                                    {{ student.coins }}</span>
+                                <span class="mx-1 badge text-bg-dark">🔥 {{ streak.current_streak }}</span>
+                                <span class="mx-1 badge text-bg-dark">🪙{{ student.coins }}</span>
                                 </h1>
                             </a>
                         </li>
